--- a/index.html
+++ b/index.html
@@ -128,6 +128,54 @@
     #skipNfc:hover {
       background: rgba(255,255,255,0.1);
     }
+    .favorite-btn {
+      background: #ff6b6b;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+      margin-top: 15px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .favorite-btn:hover {
+      background: #ff5252;
+      transform: scale(1.05);
+    }
+    .floating-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      font-size: 20px;
+      cursor: pointer;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      z-index: 1000;
+    }
+    #favoritesPanel {
+      margin-top: 20px;
+      padding-top: 20px;
+      border-top: 1px solid #eee;
+    }
+    .favorite-item {
+      background: rgba(255,255,255,0.7);
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+    }
+    .remove-btn {
+      background: #ccc;
+      color: black;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -144,11 +192,26 @@
   <div class="verse-box" id="verseBox">
     <div id="verse" class="verse"></div>
     <div id="reference" class="reference"></div>
+
+    <!-- 收藏按鈕 -->
+    <button id="favoriteBtn" class="favorite-btn">❤️ 收藏經文</button>
+
+    <!-- 分享按鈕 -->
     <div class="share-buttons">
       <a href="#" id="share-line" target="_blank">分享到 LINE</a>
       <a href="#" id="share-fb" target="_blank">分享到 Facebook</a>
     </div>
+
+    <!-- 收藏列表 -->
+    <div id="favoritesPanel" style="display:none;">
+      <h3>我的收藏</h3>
+      <div id="favoritesList"></div>
+      <button id="closeFavorites">關閉收藏列表</button>
+    </div>
   </div>
+
+  <!-- 浮動收藏清單按鈕 -->
+  <button id="showFavorites" class="floating-btn">📖 我的收藏</button>
 
   <div id="loader" class="loader">載入中...</div>
 
@@ -507,7 +570,7 @@
   }
       ];
 
-     // 設備指紋生成
+      // 取得裝置指紋
       function getDeviceFingerprint() {
         const keys = [
           navigator.platform,
@@ -523,7 +586,7 @@
         return Math.abs(hash).toString(36).slice(0, 8);
       }
 
-      // 生成今日唯一索引
+      // 根據日期和裝置指紋計算今日經文索引
       function getDailyIndex() {
         const today = new Date();
         const dateSeed = [
@@ -649,6 +712,96 @@
 
       // 跳過NFC按鈕事件
       skipNfcBtn.addEventListener('click', showVerse);
+       // ===== 收藏功能核心代碼 =====
+      const favoriteBtn = document.getElementById('favoriteBtn');
+      const showFavoritesBtn = document.getElementById('showFavorites');
+      const favoritesPanel = document.getElementById('favoritesPanel');
+      const favoritesList = document.getElementById('favoritesList');
+      const closeFavoritesBtn = document.getElementById('closeFavorites');
+
+      let currentVerse = null;
+
+      // 修改 showVerse() 時，同步更新 currentVerse
+      const originalShowVerse = showVerse;
+      showVerse = function () {
+        const index = getDailyIndex();
+        currentVerse = verses[index]; // 更新目前經文
+        originalShowVerse(); // 呼叫原本邏輯
+      }
+
+      // 點擊收藏按鈕
+      favoriteBtn.addEventListener('click', () => {
+        if (!currentVerse) return;
+
+        saveFavorite(currentVerse);
+        favoriteBtn.textContent = '✓ 已收藏';
+        favoriteBtn.style.background = '#4CAF50';
+        setTimeout(() => {
+          favoriteBtn.textContent = '❤️ 收藏經文';
+          favoriteBtn.style.background = '#ff6b6b';
+        }, 1500);
+      });
+
+      // 查看收藏按鈕
+      showFavoritesBtn.addEventListener('click', () => {
+        renderFavorites();
+        verseBox.style.display = 'none';
+        favoritesPanel.style.display = 'block';
+      });
+
+      // 關閉收藏按鈕
+      closeFavoritesBtn.addEventListener('click', () => {
+        favoritesPanel.style.display = 'none';
+        verseBox.style.display = 'block';
+      });
+
+      // 儲存收藏到 localStorage
+      function saveFavorite(verse) {
+        const favorites = loadFavorites();
+        const exists = favorites.some(fav =>
+          fav.text === verse.text && fav.ref === verse.ref
+        );
+        if (!exists) {
+          favorites.push({
+            text: verse.text,
+            ref: verse.ref,
+            date: new Date().toISOString()
+          });
+          localStorage.setItem('favorites', JSON.stringify(favorites));
+        }
+      }
+
+      // 讀取收藏
+      function loadFavorites() {
+        return JSON.parse(localStorage.getItem('favorites')) || [];
+      }
+
+      // 刪除收藏
+      function removeFavorite(index) {
+        const favorites = loadFavorites();
+        favorites.splice(index, 1);
+        localStorage.setItem('favorites', JSON.stringify(favorites));
+        renderFavorites(); // 重新渲染
+      }
+
+      // 渲染收藏列表
+      function renderFavorites() {
+        const favorites = loadFavorites();
+        if (favorites.length === 0) {
+          favoritesList.innerHTML = '<p>尚未收藏任何經文</p>';
+          return;
+        }
+        favoritesList.innerHTML = favorites.map((fav, index) => `
+          <div class="favorite-item">
+            <p>${fav.text}</p>
+            <small>${fav.ref} • ${new Date(fav.date).toLocaleDateString()}</small><br/>
+            <button onclick="removeFavorite(${index})" class="remove-btn">刪除</button>
+          </div>
+        `).join('');
+      }
+
+      // 提供刪除函數給全域用
+      window.removeFavorite = removeFavorite;
 
       // 初始化
       if (isAndroid) {
