--- a/index.html
+++ b/index.html
@@ -502,6 +502,114 @@
     ref: "我在你面前給你一個敞開的門，是無人能關的。— 啟示錄3:8"
   },
   {
+    "text": "孩子，我知道你在努力中感到疲憊，那些看不見盡頭的付出常讓你懷疑是否值得。但我告訴你，我看見你每一滴眼淚、每一次不放棄的堅持。你不是孤單的，我與你同行，為你鋪路。當你覺得再也撐不下去時，轉身來依靠我，我的膀臂永不疲乏。",
+    "ref": "疲乏的，他賜能力；軟弱的，他加力量。— 以賽亞書 40:29"
+  },
+  {
+    "text": "親愛的孩子，你因為失敗而感到羞愧與自責，彷彿全世界都不再相信你。但我永遠不會離開你，我不是根據你的成功來衡量你的價值。我愛你，不是因為你做了什麼，而是因為你是我所造、我所愛的。回到我這裡，我會給你新的開始。",
+    "ref": "人若跌倒，豈不再起來？人若迷路，豈不轉回呢？— 耶利米書 8:4"
+  },
+  {
+    "text": "孩子，你為了別人的期待與標準，壓得自己喘不過氣。你不需要成為他人眼中的完美，只要成為我眼中真實的你。我創造你時，是按著我的心意，獨一無二的。我喜悅你本來的樣子，不必偽裝，不必比較，只需住在我的愛中。",
+    "ref": "我們原是他的工作，在基督耶穌裡造成的，為要叫我們行善。— 以弗所書 2:10"
+  },
+  {
+    "text": "孩子，我知道你為著未來感到焦慮，那些你看不清的明天令你害怕。但你要知道，你的未來不在你手中，而是在我掌管之中。我為你預備的道路雖未揭曉，卻滿有恩典。你只要一步一步信靠我，就必看見我的帶領與奇妙的安排。",
+    "ref": "我知道我向你們所懷的意念，是賜平安的意念，不是降災禍的意念，要叫你們末後有指望。— 耶利米書 29:11"
+  },
+  {
+    "text": "親愛的孩子，你感到心碎、孤單，彷彿沒有人真正明白你。但我要你知道，我比誰都了解你的痛。每當你默默流淚，我都與你同哭。你不是被遺棄的，我的愛圍繞你，我的手撫慰你。放心地把傷口交給我，我會溫柔地醫治你。",
+    "ref": "耶和華靠近傷心的人，拯救靈性痛悔的人。— 詩篇 34:18"
+  },
+  {
+    "text": "孩子，你因為看不見成果而失去盼望。但要記得，每一顆種子都需要時間成長。我沒有忘記你的努力，我正在暗中為你預備豐收的時刻。你只需耐心等候，不動搖地相信，我的時候總是最美的。",
+    "ref": "當將你的事交託耶和華，並倚靠他，他就必成全。— 詩篇 37:5"
+  },
+  {
+    "text": "孩子，我知道你在人群中感到格格不入，好像總是與世界不合。但你不是被造來迎合世界的，你是被揀選出來的，是我國度的子民。當你為真理而堅持，哪怕孤單，我也與你同在，賜你力量走正直的道路。",
+    "ref": "你們是被揀選的族類，是君尊的祭司，是聖潔的國度，是屬神的子民。— 彼得前書 2:9"
+  },
+  {
+    "text": "親愛的孩子，你對自己的過去感到後悔，總想如果可以重來就好了。但我要你知道，沒有人能回到過去，但我能翻轉一切。把你的傷與錯交給我，我會讓它們成為你見證恩典的記號。你不是被定罪的，而是被赦免的。",
+    "ref": "若有人在基督裡，他就是新造的人，舊事已過，都變成新的了。— 哥林多後書 5:17"
+  },
+  {
+    "text": "孩子，你常覺得自己不夠好，不夠聰明，不夠堅強。但我要你知道，你的價值不來自能力，而來自我是誰。我是你的天父，我的眼光永遠看重你的內在，我為你歡喜，為你驕傲。你在我眼中，是極寶貴的。",
+    "ref": "你們中間誰是父親，兒子求餅，反給他石頭呢？— 路加福音 11:11"
+  },
+  {
+    "text": "孩子，我看見你為了別人而付出，卻常常被誤解，甚至被冷落。你心裡委屈，卻又選擇沉默。但你要知道，你的每一次善意我都記得，你所做的愛，我看得一清二楚。不要因人的回應而灰心，因為你所做的是為我，不是為人。",
+    "ref": "你們所做的，要從心裡做，像是給主做的，不是給人做的。— 歌羅西書 3:23"
+  },
+  {
+    "text": "親愛的孩子，你一直在尋找自己的價值和方向，卻在多次嘗試後仍感迷惘。我知道你的困惑與無助，但請相信，我創造你是有目的的。你的生命不是偶然，而是我美好的計畫。你只需安靜尋求我，我會一步一步向你顯明前方的路。",
+    "ref": "你要專心仰賴耶和華，不可倚靠自己的聰明，在你一切所行的事上都要認定他，他必指引你的路。— 箴言 3:5–6"
+  },
+  {
+    "text": "孩子，你渴望被理解與接納，但這世界總用標籤和條件來衡量人。不要為了迎合別人而失去真正的自己。我造你時，早已定義你的價值。你是被我揀選、蒙愛的寶貝，不需要證明什麼，只需活出我創造你的樣式。",
+    "ref": "你在我眼中看為寶貴、為尊榮，我又愛你。— 以賽亞書 43:4"
+  },
+  {
+    "text": "孩子，我知道你因為曾經被傷害而不再輕易相信別人。你築起高牆保護自己，但也讓愛無法進來。讓我幫你拆除這些圍牆，好嗎？我不會傷害你，我的愛能醫治你心中所有的裂痕。你可以放心地打開心門，讓我進入。",
+    "ref": "他醫好傷心的人，裹好他們的傷處。— 詩篇 147:3"
+  },
+  {
+    "text": "孩子，你感覺自己總是比不上別人，懷疑自己的能力與價值。但你要記得，大衛只是一個牧羊童，卻能戰勝巨人。不是你的能力成就大事，而是我的同在使你剛強。不要輕看自己，我早已將勇氣和智慧放在你裡面。",
+    "ref": "我豈沒有吩咐你嗎？你當剛強壯膽！不要懼怕，也不要驚惶，因為你無論往哪裡去，耶和華你的神必與你同在。— 約書亞記 1:9"
+  },
+  {
+    "text": "孩子，你有時因為信仰而與世界格格不入，甚至遭人譏笑與拒絕。但你要知道，為義受苦的人有福了。我為你預備的獎賞，遠超過今生短暫的痛苦。當你為真理站立時，你的生命正在發光，照亮周圍黑暗的人心。",
+    "ref": "為義受逼迫的人有福了！因為天國是他們的。— 馬太福音 5:10"
+  },
+  {
+    "text": "孩子，我知道你有時候對我感到失望，因為你所求的我還未成就。你甚至懷疑我是否還聽見你的禱告。但我要你知道，我的沉默不是拒絕，而是預備。我正在為你織一個比你所求更美的圖畫。不要停止禱告，也不要失去盼望。",
+    "ref": "你們祈求，就給你們；尋找，就尋見；叩門，就給你們開門。— 馬太福音 7:7"
+  },
+  {
+    "text": "孩子，你對生活中的挫敗感到灰心，總覺得不管怎麼努力，都不被肯定。但我要告訴你，你的價值不是由成績定義的。即使全世界不看好你，我仍看你為珍寶。我造你不是為了表現，而是為了愛你並與你同行。",
+    "ref": "我以永遠的愛愛你，因此我以慈愛吸引你。— 耶利米書 31:3"
+  },
+  {
+    "text": "孩子，你在別人的成功面前感到自卑，彷彿自己永遠追不上。但你不需要與任何人競爭，你的生命節奏由我定下。我為你安排的祝福，不會遲到也不會落空。別用他人的進度來否定自己，你正走在我為你預備的最美旅程上。",
+    "ref": "我們各人蒙恩，都是照基督所量給各人的恩賜。— 以弗所書 4:7"
+  },
+   {
+    "text": "孩子，你最近是不是常常覺得心煩、焦慮，好像什麼事情都無法掌握？你試著靠自己的力量撐著，卻越來越疲憊。我要你學會把重擔交給我，我願意成為你隨時的倚靠。我不會責怪你軟弱，我等著你來休息在我的懷中。",
+    "ref": "凡勞苦擔重擔的人可以到我這裡來，我就使你們得安息。— 馬太福音 11:28"
+  },
+  {
+    "text": "親愛的孩子，你面對選擇時總是害怕走錯，擔心未來會後悔。但我要你知道，你不是一個人做決定。我會與你同在，指引你的腳步。即使你走錯了，我仍能使萬事互相效力，引導你回到最好的道路。",
+    "ref": "你要認定他，他必指引你的路。— 箴言 3:6"
+  },
+  {
+    "text": "孩子，我知道你在人群中感到孤單，覺得沒有人真正懂你。但我要告訴你，我一直在你身旁，無論你說不出口的心情，還是沒人看見的眼淚，我都看得一清二楚。你並不孤單，我是你永遠的朋友與父親。",
+    "ref": "我總不撇下你，也不丟棄你。— 希伯來書 13:5"
+  },
+  {
+    "text": "孩子，你是不是對自己越來越沒信心，覺得什麼都做不好？但你要記住，我看重的不是你做得多完美，而是你願意嘗試、願意學習。即使你跌倒，我也會扶你起來，繼續走下去。我永遠不會因你的失敗而放棄你。",
+    "ref": "義人雖七次跌倒，仍必興起。— 箴言 24:16"
+  },
+  {
+    "text": "親愛的孩子，這段日子你經歷了一些讓你懷疑自己的事。你可能問：我真的有價值嗎？我要告訴你，我創造你是獨特且尊貴的，我在你身上有奇妙的計畫。別拿別人的生命劇本來衡量自己，你的故事正慢慢展開，充滿希望。",
+    "ref": "我未成形的體質，你的眼早已看見了。— 詩篇 139:16"
+  },
+  {
+    "text": "孩子，你有時會怪自己太敏感、太情緒化，覺得這樣不夠剛強。但我造你本來就有豐富的情感，這是我所喜悅的。你的憐憫、體貼與感受力，能成為許多人的祝福。不要壓抑自己，讓我來教你如何溫柔而有力地活出自己。",
+    "ref": "我軟弱的日子，耶和華是我的力量。— 詩篇 18:1"
+  },
+  {
+    "text": "孩子，我看到你為了家人與朋友默默付出，常常把自己的需要放在最後。你雖疲憊，卻仍選擇去愛。我要你知道，你所做的每一件事，我都紀念，哪怕人看不見，我也要親自報答你。你的愛心在我眼中極其寶貴。",
+    "ref": "凡你們為我這弟兄中一個最小的所做的，就是做在我身上了。— 馬太福音 25:40"
+  },
+  {
+    "text": "親愛的孩子，有時你覺得禱告沒有被垂聽，心裡感到失落。但我要你相信，我聽見你每一次的呼求，我只是用不同的方式回應你。我的時間不會遲到，你的每一滴眼淚我都收藏，並將成為祝福的種子。",
+    "ref": "耶和華聽了我的呼求，耶和華必收納我的禱告。— 詩篇 6:9"
+  },
+  {
+    "text": "孩子，你在生命中經歷了一些不公平的事，你忍耐、壓抑，但心中仍有傷。我要告訴你，我是公義的神，我必親自為你伸冤。你不用自己去報復，只需交託給我，我會以公義審判，也會用慈愛醫治你。",
+    "ref": "伸冤在我，我必報應。— 羅馬書 12:19"
+  },
+  {
     text: "親愛的，你的禱告我沒有忘記。即使你以為我沉默，其實我正安排最好的時刻來成就你所求的。",
     ref: "義人祈禱所發的力量，是大有功效的。— 雅各書5:16"
   }
