--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: url(https://ga87008.github.io/rex123/background.jpg) no-repeat center center fixed;
+      background: url(https://raw.githubusercontent.com/ga87008/Jesus/main/background.jpg.jpg) no-repeat center center fixed;
       background-size: cover;
       backdrop-filter: brightness(0.9);
     }
