--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>天父的話</title>
+  <link href="https://fonts.googleapis.com/css2?family=Long+Cang&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -13,7 +14,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: url(https://raw.githubusercontent.com/ga87008/Jesus/main/background.jpg.jpg) no-repeat center center fixed;
+      background: url(https://raw.githubusercontent.com/ga87008/rex123/refs/heads/main/background.jpg.jpg) no-repeat center center fixed;
       background-size: cover;
       backdrop-filter: brightness(0.9);
     }
@@ -33,6 +34,7 @@
       margin-bottom: 16px;
       white-space: pre-wrap;
       line-height: 1.7;
+      font-family: 'Long Cang', cursive;
     }
     .reference {
       font-size: 1.1rem;
