--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>天父的話</title>
-  <link href="https://fonts.googleapis.com/css2?family=Long+Cang&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -31,10 +31,10 @@
     .verse {
       font-size: 1.4rem;
       color: #333;
-      margin-bottom: 16px;
+      margin-bottom: 18px;
       white-space: pre-wrap;
       line-height: 1.7;
-      font-family: 'Long Cang', cursive;
+      font-family: 'Ma Shan Zheng', 'Noto Sans TC', sans-serif;
     }
     .reference {
       font-size: 1.1rem;
