--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>天父的話</title>
- <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=Noto+Sans+TC&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Iansui&family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -29,13 +31,14 @@
       display: none;
     }
     .verse {
-      font-size: 1.4rem;
-      color: #333;
-      margin-bottom: 18px;
-      white-space: pre-wrap;
-      line-height: 1.7;
-      font-family: 'Ma Shan Zheng', 'Noto Sans TC', sans-serif;
-    }
+  font-family: 'Iansui', 'Noto Sans TC', cursive; /* 優先使用芫荽體 */
+  font-size: 1.5rem; /* 稍大字號更顯手寫感 */
+  line-height: 1.8;  /* 增加行距 */
+  letter-spacing: 0.05em; /* 字距微調 */
+  color: #333;
+  margin-bottom: 20px;
+  text-shadow: 0.5px 0.5px 1px rgba(0,0,0,0.1); /* 模擬墨水暈染 */
+}
     .reference {
       font-size: 1.1rem;
       color: #555;
